Fixed the navbar logo too big on vertical monitor issue and enhanced UI for login page. -Baichen Yan, yanbaich

--- a/front-end/src/pages/login.css
+++ b/front-end/src/pages/login.css
@@ -1,5 +1,29 @@
 .login-page {
     background-color: black;
     height:100vmin;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    color: white;
 }
 
+.login-box {
+    text-align: left;
+    width: 400px;
+    background-color: #1D1D1D;
+    padding: 30px;
+    border-radius: 10px;
+    margin-top: 30px;
+}
+
+.login-title {
+    font-size: 35px;
+    color: white;
+}
+
+.login-failed {
+    height: 40px;
+    color: rgb(255, 83, 83);
+    font-size: 15px;
+}
